共享内存通讯

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,10 +2,35 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "调试",
+            "name": "(Windows) 附加",
+            "type": "cppvsdbg",
+            "request": "attach",
+            "processId": "${command:pickProcess}",
+        },
+        // {
+        //     "name": "调试 inject dll",
+        //     "type": "cppvsdbg",
+        //     "request": "attach",
+        //     "program": "${workspaceFolder}\\inject_test\\Release\\inject_test.dll",
+        //     "console": "integratedTerminal",
+        //     "processId": "${command:pickProcess}",
+        // },
+        {
+            "name": "调试 inject",
             "type": "cppvsdbg",
             "request": "launch",
-            "program": "${workspaceFolder}\\Release\\hook.exe",
+            "program": "${workspaceFolder}\\inject_test\\Release\\inject.exe",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${fileDirname}",
+            "environment": [],
+            "console": "integratedTerminal",
+        },
+        {
+            "name": "调试 share",
+            "type": "cppvsdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}\\sharemem_test\\Release\\SHARE.exe",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
