--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -92,5 +92,65 @@
 			"group": "build",
 			"detail": "编译器: cl.exe"
 		},
+		{
+			"type": "cppbuild",
+			"label": "BUILD SHARE DLL",
+			"command": "cl.exe",
+			"args": [
+				"/LD",
+				"/arch:IA32",
+				"/EHsc",
+				// "/O2",
+				// "/DNDEBUG",
+				"/Zi",
+				"/std:c++20",
+				"/I${workspaceFolder}\\sharemem_test\\src",
+				"/IC:\\Program Files (x86)\\Windows Kits\\10\\Include\\10.0.22621.0\\um",
+				"/D_CRT_SECURE_NO_WARNINGS",
+				"/D_MBCS",
+				"/Fo:${workspaceFolder}\\sharemem_test\\build\\",
+				"/Fe:${workspaceFolder}\\sharemem_test\\Release\\sharemem_test.dll",
+				"${workspaceFolder}\\sharemem_test\\src\\dllmain.cpp",
+				"/link",
+				"/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22621.0\\um\\x86",
+			],
+			"options": {
+				"cwd": "${fileDirname}"
+			},
+			"problemMatcher": [
+				"$msCompile"
+			],
+			"group": "build",
+			"detail": "编译器: cl.exe"
+		},
+		{
+			"type": "cppbuild",
+			"label": "BUILD SHARE",
+			"command": "cl.exe",
+			"args": [
+				"/arch:IA32",
+				// "/DNDEBUG",
+				"/Zi",
+				"/EHsc",
+				"/std:c++20",
+				"/nologo",
+				"/MD",
+				"/I${workspaceFolder}\\sharemem_test\\src",
+				"/IC:\\Program Files (x86)\\Windows Kits\\10\\Include\\10.0.22621.0\\um",
+				"/Fo:${workspaceFolder}\\sharemem_test\\build\\",
+				"/Fe${workspaceFolder}\\sharemem_test\\Release\\SHARE.exe",
+				"${workspaceFolder}\\sharemem_test\\src\\inject.cpp",
+				"/link",
+				"/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22621.0\\um\\x86",
+			],
+			"options": {
+				"cwd": "${fileDirname}"
+			},
+			"problemMatcher": [
+				"$msCompile"
+			],
+			"group": "build",
+			"detail": "编译器: cl.exe"
+		},
 	]
 }
