--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,14 +3,41 @@
 	"tasks": [
 		{
 			"type": "cppbuild",
+			"label": "BUILD HIDE DLL",
+			"command": "cl.exe",
+			"args": [
+				"/LD",
+				"/arch:IA32",
+				"/EHsc",
+				"/Zi",
+				"/std:c++20",
+				"/I${workspaceFolder}\\hide_test\\src",
+				"/IC:\\Program Files (x86)\\Windows Kits\\10\\Include\\10.0.22621.0\\um",
+				"/D_CRT_SECURE_NO_WARNINGS",
+				"/D_MBCS",
+				"/Fo:${workspaceFolder}\\hide_test\\build\\",
+				"/Fe:${workspaceFolder}\\hide_test\\Release\\hide.dll",
+				"${workspaceFolder}\\hide_test\\src\\*.cpp",
+				"/link",
+				"/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22621.0\\um\\x86"
+			],
+			"options": {
+				"cwd": "${fileDirname}"
+			},
+			"problemMatcher": [
+				"$msCompile"
+			],
+			"group": "build",
+			"detail": "编译器: cl.exe"
+		},
+		{
+			"type": "cppbuild",
 			"label": "BUILD HOOK DLL",
 			"command": "cl.exe",
 			"args": [
 				"/LD",
 				"/arch:IA32",
 				"/EHsc",
-				// "/O2",
-				// "/DNDEBUG",
 				"/Zi",
 				"/std:c++20",
 				"/I${workspaceFolder}\\hook_test\\src",
@@ -21,7 +48,7 @@
 				"/Fe:${workspaceFolder}\\hook_test\\Release\\hook.dll",
 				"${workspaceFolder}\\hook_test\\src\\*.cpp",
 				"/link",
-				"/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22621.0\\um\\x86",
+				"/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22621.0\\um\\x86"
 			],
 			"options": {
 				"cwd": "${fileDirname}"
@@ -40,8 +67,6 @@
 				"/LD",
 				"/arch:IA32",
 				"/EHsc",
-				// "/O2",
-				// "/DNDEBUG",
 				"/Zi",
 				"/std:c++20",
 				"/I${workspaceFolder}\\inject_test\\src",
@@ -52,7 +77,7 @@
 				"/Fe:${workspaceFolder}\\inject_test\\Release\\inject_test.dll",
 				"${workspaceFolder}\\inject_test\\src\\dllmain.cpp",
 				"/link",
-				"/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22621.0\\um\\x86",
+				"/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22621.0\\um\\x86"
 			],
 			"options": {
 				"cwd": "${fileDirname}"
@@ -69,7 +94,6 @@
 			"command": "cl.exe",
 			"args": [
 				"/arch:IA32",
-				// "/DNDEBUG",
 				"/Zi",
 				"/EHsc",
 				"/std:c++20",
@@ -81,7 +105,7 @@
 				"/Fe${workspaceFolder}\\inject_test\\Release\\inject.exe",
 				"${workspaceFolder}\\inject_test\\src\\inject.cpp",
 				"/link",
-				"/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22621.0\\um\\x86",
+				"/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22621.0\\um\\x86"
 			],
 			"options": {
 				"cwd": "${fileDirname}"
@@ -100,8 +124,6 @@
 				"/LD",
 				"/arch:IA32",
 				"/EHsc",
-				// "/O2",
-				// "/DNDEBUG",
 				"/Zi",
 				"/std:c++20",
 				"/I${workspaceFolder}\\sharemem_test\\src",
@@ -129,7 +151,6 @@
 			"command": "cl.exe",
 			"args": [
 				"/arch:IA32",
-				// "/DNDEBUG",
 				"/Zi",
 				"/EHsc",
 				"/std:c++20",
@@ -141,7 +162,7 @@
 				"/Fe${workspaceFolder}\\sharemem_test\\Release\\SHARE.exe",
 				"${workspaceFolder}\\sharemem_test\\src\\inject.cpp",
 				"/link",
-				"/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22621.0\\um\\x86",
+				"/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22621.0\\um\\x86"
 			],
 			"options": {
 				"cwd": "${fileDirname}"
@@ -152,5 +173,108 @@
 			"group": "build",
 			"detail": "编译器: cl.exe"
 		},
+		{
+			"type": "cppbuild",
+			"label": "BUILD TDX DLL",
+			"command": "cl.exe",
+			"args": [
+				"/LD",
+				"/arch:IA32",
+				"/EHsc",
+				"/Zi",
+				"/std:c++20",
+				"/I${workspaceFolder}\\tdx_test\\src",
+				"/IC:\\Program Files (x86)\\Windows Kits\\10\\Include\\10.0.22621.0\\um",
+				"/D_CRT_SECURE_NO_WARNINGS",
+				"/D_MBCS",
+				"/Fo:${workspaceFolder}\\tdx_test\\build\\",
+				"/Fe:${workspaceFolder}\\tdx_test\\Release\\tdx_test.dll",
+				"${workspaceFolder}\\tdx_test\\src\\dllmain.cpp",
+				"/link",
+				"/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22621.0\\um\\x86"
+			],
+			"options": {
+				"cwd": "${fileDirname}"
+			},
+			"problemMatcher": [
+				"$msCompile"
+			],
+			"group": "build",
+			"detail": "编译器: cl.exe"
+		},
+		{
+			"type": "cppbuild",
+			"label": "BUILD TDX",
+			"command": "cl.exe",
+			"args": [
+				"/arch:IA32",
+				"/Zi",
+				"/EHsc",
+				"/std:c++20",
+				"/nologo",
+				"/MD",
+				"/I${workspaceFolder}\\tdx_test\\src",
+				"/IC:\\Program Files (x86)\\Windows Kits\\10\\Include\\10.0.22621.0\\um",
+				"/Fo:${workspaceFolder}\\tdx_test\\build\\",
+				"/Fe${workspaceFolder}\\tdx_test\\Release\\tdx.exe",
+				"${workspaceFolder}\\tdx_test\\src\\inject.cpp",
+				"/link",
+				"/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22621.0\\um\\x86"
+			],
+			"options": {
+				"cwd": "${fileDirname}"
+			},
+			"problemMatcher": [
+				"$msCompile"
+			],
+			"group": "build",
+			"detail": "编译器: cl.exe"
+		},
+		{
+			"type": "cppbuild",
+			"label": "C/C++: cl.exe 生成活动文件",
+			"command": "cl.exe",
+			"args": [
+				"/Zi",
+				"/EHsc",
+				"/nologo",
+				"/Fe${fileDirname}\\${fileBasenameNoExtension}.exe",
+				"${file}"
+			],
+			"options": {
+				"cwd": "${fileDirname}"
+			},
+			"problemMatcher": [
+				"$msCompile"
+			],
+			"group": "build",
+			"detail": "编译器: cl.exe"
+		},
+		{
+			"type": "cppbuild",
+			"label": "构建当前DLL文件",
+			"command": "cl.exe",
+			"args": [
+				"/LD",
+				"/arch:IA32",
+				"/EHsc",
+				"/Zi",
+				"/std:c++20",
+				"/nologo",
+				"/IC:\\Program Files (x86)\\Windows Kits\\10\\Include\\10.0.22621.0\\um",
+				"/D_CRT_SECURE_NO_WARNINGS",
+				"/D_MBCS",
+				"/Fe${fileDirname}\\${fileBasenameNoExtension}.dll",
+				"${file}"
+			],
+			"options": {
+				"cwd": "${fileDirname}"
+			},
+			"problemMatcher": [
+				"$msCompile"
+			],
+			"group": "build",
+			"detail": "编译器: cl.exe"
+		}
 	]
 }
